Implemented category form with validation

--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -1,7 +1,7 @@
 <div>
 
 {{#each categories}}
-	<a href={{this.url}}>{{this.name}}</a><br>
+	<a href="category/{{this.url}}">{{this.name}}</a><br>
 {{/each}}
 
 <div>
