Implemented image upload feature

--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -3,5 +3,6 @@
 	<h1>{{ item.name }}</h1>
 	{{ item.description }}<br>
 	{{ item.price }}<br>
-	{{ item.stock }}
+	{{ item.stock }}<br>
+	<img class="item-photo" src="/uploads/{{ item.photo }}">
 </div>
