Revert "Implemented image upload feature"
This reverts commit 5ebd0c0d1ff00901f77ca473928db145c5c9153c.

--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -3,6 +3,5 @@
 	<h1>{{ item.name }}</h1>
 	{{ item.description }}<br>
 	{{ item.price }}<br>
-	{{ item.stock }}<br>
-	<img class="item-photo" src="/uploads/{{ item.photo }}">
+	{{ item.stock }}
 </div>
