--- a/views/forms/item.handlebars
+++ b/views/forms/item.handlebars
@@ -5,7 +5,7 @@
 {{/each}}
 
 <h1>Add a new item</h1>
-<form method="POST" enctype="multipart/form-data">
+<form method="POST">
 	<label for="name">Name</label>
 	<input type="text" name="name">
 	<br>
@@ -32,10 +32,6 @@
 	
 	<label for="url">URL</label>
 	<input type="text" name="url">
-	<br>
-
-	<label for="photo">Item image</label>
-	<input type="file" name="photo">
 	<br>
 	
 	<input type="submit" value="Add">
