--- a/views/forms/editcategory.handlebars
+++ b/views/forms/editcategory.handlebars
@@ -18,5 +18,8 @@
 	<input type="text" name="url" value="{{category.url}}" required>
 	<br>
 	
+	<label for="admin_pwd">Insert your password to continue:</label>
+	<input type="password" name="admin_pwd"><br>
+	
 	<input type="submit" value="Add">
 </form>
