--- a/views/forms/item.handlebars
+++ b/views/forms/item.handlebars
@@ -7,15 +7,15 @@
 <h1>Add a new item</h1>
 <form method="POST" enctype="multipart/form-data">
 	<label for="name">Name</label>
-	<input type="text" name="name">
+	<input type="text" name="name" required>
 	<br>
 	
 	<label for="description">Description</label>
-	<input type="text" name="description">
+	<input type="text" name="description" required>
 	<br>
 	
 	<label for="category">Category</label>
-	<select name="category">
+	<select name="category" required>
 		{{#each categories}}
 			<option value={{this._id}}>{{this.name}}</option>
 		{{/each}}
@@ -23,15 +23,15 @@
 	<br>
 	
 	<label for="price">Price</label>
-	<input type="text" name="price">
+	<input type="text" name="price" required>
 	<br>
 	
 	<label for="stock">Stock</label>
-	<input type="number" min=0 name="stock">
+	<input type="number" min=0 name="stock" required>
 	<br>
 	
 	<label for="url">URL</label>
-	<input type="text" name="url">
+	<input type="text" name="url" required>
 	<br>
 
 	<label for="photo">Item image</label>
