--- a/views/forms/category.handlebars
+++ b/views/forms/category.handlebars
@@ -1,5 +1,5 @@
 {{#each errors}}
-	<div class="error-msg">
+	<div class="alert alert-danger">
 		{{this}}
 	</div>
 {{/each}}
@@ -7,15 +7,15 @@
 <h1>Add a new category</h1>
 <form method="POST" action="">
 	<label for="name">Name</label>
-	<input type="text" name="name" required>
+	<input class="form-control" type="text" name="name" required>
 	<br>
 
 	<label for="description">Description</label>
-	<input type="text" name="description" required>
+	<input class="form-control" type="text" name="description" required>
 	<br>
 
 	<label for="url">URL</label>
-	<input type="text" name="url" required>
+	<input class="form-control" type="text" name="url" required>
 	<br>
 	
 	<input type="submit" value="Add">
