--- a/views/forms/editcategory.handlebars
+++ b/views/forms/editcategory.handlebars
@@ -1,5 +1,5 @@
 {{#each errors}}
-	<div class="error-msg">
+	<div class="alert alert-danger">
 		{{this}}
 	</div>
 {{/each}}
@@ -7,19 +7,19 @@
 <h1>Update category</h1>
 <form method="POST" action="">
 	<label for="name">Name</label>
-	<input type="text" name="name" value="{{category.name}}" required>
+	<input class="form-control" type="text" name="name" value="{{category.name}}" required>
 	<br>
 
 	<label for="description">Description</label>
-	<input type="text" name="description" value="{{category.description}}" required>
+	<input class="form-control" type="text" name="description" value="{{category.description}}" required>
 	<br>
 
 	<label for="url">URL</label>
-	<input type="text" name="url" value="{{category.url}}" required>
+	<input class="form-control" type="text" name="url" value="{{category.url}}" required>
 	<br>
 	
 	<label for="admin_pwd">Insert your password to continue:</label>
-	<input type="password" name="admin_pwd"><br>
+	<input class="form-control" type="password" name="admin_pwd"><br>
 	
 	<input type="submit" value="Add">
 </form>
