--- a/views/forms/edititem.handlebars
+++ b/views/forms/edititem.handlebars
@@ -1,5 +1,5 @@
 {{#each errors}}
-	<div class="error-msg">
+	<div class="alert alert-danger">
 		{{this}}
 	</div>
 {{/each}}
@@ -7,15 +7,15 @@
 <h1>Update item</h1>
 <form method="POST" enctype="multipart/form-data">
 	<label for="name">Name</label>
-	<input type="text" name="name" value="{{item.name}}" required>
+	<input class="form-control" type="text" name="name" value="{{item.name}}" required>
 	<br>
 	
 	<label for="description">Description</label>
-	<input type="text" name="description" value="{{item.description}}" required>
+	<input class="form-control" type="text" name="description" value="{{item.description}}" required>
 	<br>
 	
 	<label for="category">Category</label>
-	<select name="category" required>
+	<select class="form-control" name="category" required>
 		{{#each categories}}
 			<option value={{this._id}} {{#ifCond this._id ../item.category}}selected{{/ifCond}}>
 				{{this.name}}
@@ -25,23 +25,23 @@
 	<br>
 	
 	<label for="price">Price</label>
-	<input type="text" name="price" value="{{item.price}}" required>
+	<input class="form-control" type="text" name="price" value="{{item.price}}" required>
 	<br>
 	
 	<label for="stock">Stock</label>
-	<input type="number" min=0 name="stock" value="{{item.stock}}" required>
+	<input class="form-control" type="number" min=0 name="stock" value="{{item.stock}}" required>
 	<br>
 	
 	<label for="url">URL</label>
-	<input type="text" name="url" value="{{item.url}}" required>
+	<input class="form-control" type="text" name="url" value="{{item.url}}" required>
 	<br>
 
-	<label for="photo">Item image(leave empty to remain unchanged)</label>
-	<input type="file" name="photo" value="/uploads/{{item.photo}}">
+	<label for="photo">Item image (leave empty to remain unchanged)</label>
+	<input class="form-control" type="file" name="photo" value="/uploads/{{item.photo}}">
 	<br>
 	
 	<label for="admin_pwd">Insert your password to continue:</label>
-	<input type="password" name="admin_pwd" required>
+	<input class="form-control" type="password" name="admin_pwd" required>
 	
 	<input type="submit" value="Add">
 </form>
