--- a/views/forms/item.handlebars
+++ b/views/forms/item.handlebars
@@ -1,5 +1,5 @@
 {{#each errors}}
-	<div class="error-msg">
+	<div class="alert alert-danger">
 		{{this}}
 	</div>
 {{/each}}
@@ -7,15 +7,15 @@
 <h1>Add a new item</h1>
 <form method="POST" enctype="multipart/form-data">
 	<label for="name">Name</label>
-	<input type="text" name="name" required>
+	<input class="form-control" type="text" name="name" required>
 	<br>
 	
 	<label for="description">Description</label>
-	<input type="text" name="description" required>
+	<input class="form-control" type="text" name="description" required>
 	<br>
 	
 	<label for="category">Category</label>
-	<select name="category" required>
+	<select class="form-control" name="category" required>
 		{{#each categories}}
 			<option value={{this._id}}>{{this.name}}</option>
 		{{/each}}
@@ -23,19 +23,19 @@
 	<br>
 	
 	<label for="price">Price</label>
-	<input type="text" name="price" required>
+	<input class="form-control" type="text" name="price" required>
 	<br>
 	
 	<label for="stock">Stock</label>
-	<input type="number" min=0 name="stock" required>
+	<input class="form-control" type="number" min=0 name="stock" required>
 	<br>
 	
 	<label for="url">URL</label>
-	<input type="text" name="url" required>
+	<input class="form-control" type="text" name="url" required>
 	<br>
 
 	<label for="photo">Item image</label>
-	<input type="file" name="photo">
+	<input class="form-control" type="file" name="photo">
 	<br>
 	
 	<input type="submit" value="Add">
