--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,9 +3,12 @@
 	<head>
 		<title>Inventory Application</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="/styles.css">
+		<link rel="stylesheet" href="/css/styles.css">
+		<link rel="stylesheet" href="/css/bootstrap-4.5.2-dist/css/bootstrap.min.css">
 	</head>
 	<body>
-		{{{body}}}
+		<div class="container mt-2">
+			{{{body}}}
+		</div>
 	</body>
 </html>
